--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>3.3.4</spring.boot.version>
-        <telegrambot.starter.version>6.9.7.1</telegrambot.starter.version>
+        <telegrambot.pengrad.version>7.9.1</telegrambot.pengrad.version>
     </properties>
 
     <dependencyManagement>
@@ -37,10 +37,11 @@
             </dependency>
 
             <dependency>
-                <groupId>org.telegram</groupId>
-                <artifactId>telegrambots-spring-boot-starter</artifactId>
-                <version>${telegrambot.starter.version}</version>
+                <groupId>com.github.pengrad</groupId>
+                <artifactId>java-telegram-bot-api</artifactId>
+                <version>${telegrambot.pengrad.version}</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
